--- a/Makefile.am
+++ b/Makefile.am
@@ -7,7 +7,8 @@ AM_LDFLAGS=$(BOOST_LDFLAGS)
 lib_LIBRARIES = libsec++.a
 libsec++_a_LDADD=
 libsec++_a_SOURCES = src/getCIK.cpp \
-	src/sec_info.cpp
+	src/sec_info.cpp \
+	Cxxurl/url.cpp
  
 pkgconfigdir = /usr/lib/pkgconfig
 pkgconfig_DATA = sec.pc
@@ -19,5 +20,6 @@ bin_PROGRAMS = 	xbrl
 xbrl_LDADD = 
 
 xbrl_SOURCES = src/getCIK.cpp\
-		src/sec_info.cpp\
+		src/sec_info.cpp \
+		Cxxurl/url.cpp \
 		src/main.cpp
