--- a/configure.ac
+++ b/configure.ac
@@ -16,6 +16,10 @@ AM_PROG_AR
 LT_INIT
 
 AX_BOOST_BASE([])
+AX_BOOST_SYSTEM
+AX_BOOST_DATE_TIME
+AX_BOOST_ASIO
+AX_PTHREAD
 
 # Checks for header files.
 
