TRIED TO GET HTTPS WORKING

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,8 +6,10 @@ AM_LDFLAGS=$(BOOST_LDFLAGS) $(OPENSSL_LDFLAGS)
 
 lib_LIBRARIES = libsecxx.a
 
-libsecxx_a_SOURCES = src/sec_connection.cpp
-	src/url.cpp
+libsecxx_a_SOURCES = src/sec_connection.cpp\
+	src/url.cpp\
+	src/client.cpp
+	
 libsecxx_a_LIBADD = $(BOOST_DATE_TIME_LIB) $(BOOST_SYSTEM_LIB) $(OPENSSL_LIBS) $(PTHREAD_CFLAGS)
  
 pkgconfigdir = /usr/lib/pkgconfig
@@ -21,7 +23,5 @@ xbrl_LDADD = $(BOOST_DATE_TIME_LIB) $(BOOST_SYSTEM_LIB) $(OPENSSL_LIBS) $(PTHREA
 
 xbrl_SOURCES = src/url.cpp \
 		src/sec_connection.cpp\
-		src/url_helper.cpp\
 		src/client.cpp\
-		src/url.cpp\
 		src/main.cpp
