--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 ACLOCAL_AMFLAGS=-I m4
 
 AUTOMAKE_OPTIONS = subdir-objects
-AM_CPPFLAGS = -Wfatal-errors $(BOOST_CPPFLAGS) $(PTHREAD_CFLAGS)
+AM_CPPFLAGS = $(BOOST_CPPFLAGS) $(PTHREAD_CFLAGS)
 AM_LDFLAGS=$(BOOST_LDFLAGS) $(OPENSSL_LDFLAGS)
 
 lib_LIBRARIES = libsecxx.a
