made change to makefile

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,8 +3,8 @@ ACLOCAL_AMFLAGS=-I m4
 AUTOMAKE_OPTIONS = subdir-objects
 
 AM_CPPFLAGS = $(BOOST_CPPFLAGS) $(XERCES_CFLAGS) $(PTHREAD_CFLAGS)
-AM_LDFLAGS=$(BOOST_LDFLAGS) $(OPENSSL_LDFLAGS) $(XERCES_LDFLAGS)
-AM_LIBADD = $(BOOST_DATE_TIME_LIB) $(BOOST_SYSTEM_LIB) $(OPENSSL_LIBS) $(PTHREAD_CFLAGS)
+AM_LDFLAGS=$(BOOST_LDFLAGS) $(OPENSSL_LDFLAGS) $(XERCES_LDFLAGS) $(PTHREAD_CFLAGS)
+AM_LDADD = $(BOOST_DATE_TIME_LIB) $(BOOST_SYSTEM_LIB) $(OPENSSL_LIBS) 
 
 pkgconfigdir = /usr/lib/pkgconfig
 pkgconfig_DATA = sec.pc
