changes to makefile

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,7 +4,13 @@ AUTOMAKE_OPTIONS = subdir-objects
 
 AM_CPPFLAGS = $(BOOST_CPPFLAGS) $(XERCES_CFLAGS) $(PTHREAD_CFLAGS)
 AM_LDFLAGS=$(BOOST_LDFLAGS) $(OPENSSL_LDFLAGS) $(XERCES_LDFLAGS) $(PTHREAD_CFLAGS)
-AM_LDADD = $(BOOST_DATE_TIME_LIB) $(BOOST_SYSTEM_LIB) $(OPENSSL_LIBS) 
+
+bin_PROGRAMS = 	xbrl
+xbrl_SOURCES = src/url.cpp \
+		src/reports.cpp\
+		src/main.cpp
+
+xbrl_LDADD = $(BOOST_DATE_TIME_LIB) $(BOOST_SYSTEM_LIB) $(OPENSSL_LIBS) 
 
 pkgconfigdir = /usr/lib/pkgconfig
 pkgconfig_DATA = sec.pc
@@ -15,7 +21,3 @@ lib_LIBRARIES = libsecxx.a
 libsecxx_a_SOURCES = src/reports.cpp\
 	src/url.cpp
 
-bin_PROGRAMS = 	xbrl
-xbrl_SOURCES = src/url.cpp \
-		src/reports.cpp\
-		src/main.cpp
