--- a/configure.ac
+++ b/configure.ac
@@ -13,14 +13,15 @@ AC_PROG_CC
 AM_PROG_AR
 
 # Checks for libraries.
-LT_INIT
+#LT_INIT
 
 AX_CHECK_OPENSSL
 AX_BOOST_BASE([])
 AX_BOOST_SYSTEM
 AX_BOOST_DATE_TIME
 AX_BOOST_ASIO
-AX_LIB_XERCES()
+AX_LIB_XERCES
+AX_XERCESC
 AX_PTHREAD
 
 # Checks for header files.
